init version for dify

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -40,6 +40,7 @@
     { "path": "../libs/providers/langchain-tavily" },
     { "path": "../libs/providers/langchain-weaviate" },
     { "path": "../libs/providers/langchain-xai" },
-    { "path": "../libs/providers/langchain-yandex" }
+    { "path": "../libs/providers/langchain-yandex" },
+    { "path": "../libs/providers/langchain-dify" }
   ]
 }
