--- a/examples/package.json
+++ b/examples/package.json
@@ -45,6 +45,7 @@
     "@langchain/community": "workspace:*",
     "@langchain/core": "workspace:*",
     "@langchain/deepseek": "workspace:*",
+    "@langchain/dify": "workspace:*",
     "@langchain/exa": "workspace:*",
     "@langchain/google-cloud-sql-pg": "workspace:^",
     "@langchain/google-common": "workspace:*",
